Updated td-agent to match dockerfile config

--- a/td-agent.conf
+++ b/td-agent.conf
@@ -1,66 +1,64 @@
-## match tag=debug.** and dump to console
-<match debug.**>
-  type stdout
+<match fluent.**>
+  type null
 </match>
 
-####
-## Source descriptions:
-##
 
-## built-in TCP input
-## @see http://docs.fluentd.org/articles/in_forward
 <source>
-  type forward
+  type tail
+  path /var/lib/docker/containers/*/*-json.log
+  pos_file /var/log/td-agent/fluentd-docker.pos
+  time_format %Y-%m-%dT%H:%M:%S
+  tag docker.*
+  format json
+  read_from_head true
 </source>
 
-## built-in UNIX socket input
-#<source>
-#  type unix
-#</source>
+<match docker.var.lib.docker.containers.*.*.log>
+  type kubernetes
+  container_id ${tag_parts[5]}
+  tag docker.${name}
+</match>
 
-# HTTP input
-# POST http://localhost:8888/<tag>?json=<json>
-# POST http://localhost:8888/td.myapp.login?json={"user"%3A"me"}
-# @see http://docs.fluentd.org/articles/in_http
 <source>
-  type http
-  port 8888
+  type systemd
+  path /varlog/journal
+  filters [{ "_SYSTEMD_UNIT": "flanneld.service" }]
+  pos_file /var/log/td-agent/flanneld.pos
+  tag systemd.flannel
+  read_from_head true
 </source>
 
-## live debugging agent
 <source>
-  type debug_agent
-  bind 127.0.0.1
-  port 24230
+  type systemd
+  path /varlog/journal
+  filters [{ "_SYSTEMD_UNIT": "fleet.service" }]
+  pos_file /var/log/td-agent/fleet.pos
+  tag systemd.fleet
+  read_from_head true
 </source>
-<match collectd>
+
+<source>
+  type systemd
+  path /varlog/journal
+  filters [{ "_SYSTEMD_UNIT": "etcd2.service" }]
+  pos_file /var/log/td-agent/etcd2.pos
+  tag systemd.etcd2
+  read_from_head true
+</source>
+
+<source>
+  type systemd
+  path /varlog/journal
+  filters [{ "_SYSTEMD_UNIT": "kubelet.service" }]
+  pos_file /var/log/td-agent/kubelet.pos
+  tag systemd.kubelet
+  read_from_head true
+</source>
+
+
+<match systemd.** kubernetes.**>
   type record_reformer
-  tag metrics.${tag}.<YOUR USERNAME HERE>-<YOUR TOKEN HERE>
-  <record>
-    timestamp ${time}
-  </record>
-</match>
-
-<match metrics.**>
-  type secure_forward
-  shared_key cisco_zeus_log_metric_pipline
-  self_hostname fluentd-client1.ciscozeus.io
-  secure false
-  keepalive 10
-  <server>
-     host data01.ciscozeus.io
-  </server>
-</match>
-
-<source>
-  type syslog
-  port 42185
-  tag  syslog
-</source>
-
-<match syslog.**>
-  type record_reformer
-  tag logs.${tag}.<YOUR USERNAME HERE>-<YOUR TOKEN HERE>
+  tag logs.${tag}.<USERNAME>-<TOKEN>
   <record>
     @timestamp ${time}
   </record>
